@@ -120,8 +120,8 @@ public final class FlowTriggerConfigTriggerPropertiesScheduledArgs extends com.p
      * import com.pulumi.aws.appflow.Flow;
      * import com.pulumi.aws.appflow.FlowArgs;
      * import com.pulumi.aws.appflow.inputs.FlowTriggerConfigArgs;
-     * import java.util.List;
      * import java.util.ArrayList;
+     * import java.util.Arrays;
      * import java.util.Map;
      * import java.io.File;
      * import java.nio.file.Files;
@@ -135,7 +135,7 @@ public final class FlowTriggerConfigTriggerPropertiesScheduledArgs extends com.p
      *     public static void stack(Context ctx) {
      *         var example = new Flow("example", FlowArgs.builder()
      *             .triggerConfig(FlowTriggerConfigArgs.builder()
-     *                 .scheduled(List.of(Map.of("scheduleExpression", "rate(1minutes)")))
+     *                 .scheduled(Arrays.asList(Map.of("scheduleExpression", "rate(1minutes)")))
      *                 .build())
      *             .build());
      * 
@@ -161,8 +161,8 @@ public final class FlowTriggerConfigTriggerPropertiesScheduledArgs extends com.p
      * import com.pulumi.aws.appflow.Flow;
      * import com.pulumi.aws.appflow.FlowArgs;
      * import com.pulumi.aws.appflow.inputs.FlowTriggerConfigArgs;
-     * import java.util.List;
      * import java.util.ArrayList;
+     * import java.util.Arrays;
      * import java.util.Map;
      * import java.io.File;
      * import java.nio.file.Files;
@@ -176,7 +176,7 @@ public final class FlowTriggerConfigTriggerPropertiesScheduledArgs extends com.p
      *     public static void stack(Context ctx) {
      *         var example = new Flow("example", FlowArgs.builder()
      *             .triggerConfig(FlowTriggerConfigArgs.builder()
-     *                 .scheduled(List.of(Map.of("scheduleExpression", "rate(1minutes)")))
+     *                 .scheduled(Arrays.asList(Map.of("scheduleExpression", "rate(1minutes)")))
      *                 .build())
      *             .build());
      * 
@@ -359,8 +359,8 @@ public final class FlowTriggerConfigTriggerPropertiesScheduledArgs extends com.p
          * import com.pulumi.aws.appflow.Flow;
          * import com.pulumi.aws.appflow.FlowArgs;
          * import com.pulumi.aws.appflow.inputs.FlowTriggerConfigArgs;
-         * import java.util.List;
          * import java.util.ArrayList;
+         * import java.util.Arrays;
          * import java.util.Map;
          * import java.io.File;
          * import java.nio.file.Files;
@@ -374,7 +374,7 @@ public final class FlowTriggerConfigTriggerPropertiesScheduledArgs extends com.p
          *     public static void stack(Context ctx) {
          *         var example = new Flow("example", FlowArgs.builder()
          *             .triggerConfig(FlowTriggerConfigArgs.builder()
-         *                 .scheduled(List.of(Map.of("scheduleExpression", "rate(1minutes)")))
+         *                 .scheduled(Arrays.asList(Map.of("scheduleExpression", "rate(1minutes)")))
          *                 .build())
          *             .build());
          * 
@@ -404,8 +404,8 @@ public final class FlowTriggerConfigTriggerPropertiesScheduledArgs extends com.p
          * import com.pulumi.aws.appflow.Flow;
          * import com.pulumi.aws.appflow.FlowArgs;
          * import com.pulumi.aws.appflow.inputs.FlowTriggerConfigArgs;
-         * import java.util.List;
          * import java.util.ArrayList;
+         * import java.util.Arrays;
          * import java.util.Map;
          * import java.io.File;
          * import java.nio.file.Files;
@@ -419,7 +419,7 @@ public final class FlowTriggerConfigTriggerPropertiesScheduledArgs extends com.p
          *     public static void stack(Context ctx) {
          *         var example = new Flow("example", FlowArgs.builder()
          *             .triggerConfig(FlowTriggerConfigArgs.builder()
-         *                 .scheduled(List.of(Map.of("scheduleExpression", "rate(1minutes)")))
+         *                 .scheduled(Arrays.asList(Map.of("scheduleExpression", "rate(1minutes)")))
          *                 .build())
          *             .build());
          * 
