@@ -39,8 +39,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.aws.quicksight.DashboardArgs;
  * import com.pulumi.aws.quicksight.inputs.DashboardSourceEntityArgs;
  * import com.pulumi.aws.quicksight.inputs.DashboardSourceEntitySourceTemplateArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -83,8 +83,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.core.Output;
  * import com.pulumi.aws.quicksight.Dashboard;
  * import com.pulumi.aws.quicksight.DashboardArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -101,25 +101,25 @@ import javax.annotation.Nullable;
  *             .name("example-name")
  *             .versionDescription("version")
  *             .definition(Map.ofEntries(
- *                 Map.entry("dataSetIdentifiersDeclarations", List.of(Map.ofEntries(
+ *                 Map.entry("dataSetIdentifiersDeclarations", Arrays.asList(Map.ofEntries(
  *                     Map.entry("dataSetArn", dataset.arn()),
  *                     Map.entry("identifier", "1")
  *                 ))),
- *                 Map.entry("sheets", List.of(Map.ofEntries(
+ *                 Map.entry("sheets", Arrays.asList(Map.ofEntries(
  *                     Map.entry("title", "Example"),
  *                     Map.entry("sheetId", "Example1"),
- *                     Map.entry("visuals", List.of(Map.of("lineChartVisual", Map.ofEntries(
+ *                     Map.entry("visuals", Arrays.asList(Map.of("lineChartVisual", Map.ofEntries(
  *                         Map.entry("visualId", "LineChart"),
  *                         Map.entry("title", Map.of("formatText", Map.of("plainText", "Line Chart Example"))),
  *                         Map.entry("chartConfiguration", Map.of("fieldWells", Map.of("lineChartAggregatedFieldWells", Map.ofEntries(
- *                             Map.entry("categories", List.of(Map.of("categoricalDimensionField", Map.ofEntries(
+ *                             Map.entry("categories", Arrays.asList(Map.of("categoricalDimensionField", Map.ofEntries(
  *                                 Map.entry("fieldId", "1"),
  *                                 Map.entry("column", Map.ofEntries(
  *                                     Map.entry("dataSetIdentifier", "1"),
  *                                     Map.entry("columnName", "Column1")
  *                                 ))
  *                             )))),
- *                             Map.entry("values", List.of(Map.of("categoricalMeasureField", Map.ofEntries(
+ *                             Map.entry("values", Arrays.asList(Map.of("categoricalMeasureField", Map.ofEntries(
  *                                 Map.entry("fieldId", "2"),
  *                                 Map.entry("column", Map.ofEntries(
  *                                     Map.entry("dataSetIdentifier", "1"),
